cmake_minimum_required(VERSION 3.19)
project(APIProbe LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Network)

qt_standard_project_setup()

qt_add_executable(APIProbe
    WIN32 MACOSX_BUNDLE
    main.cpp
    apiprobe.cpp
    apiprobe.h
    urllineedit.cpp
    urllineedit.h
    apiprobe.h
)

target_link_libraries(APIProbe
    PRIVATE
        Qt::Core
        Qt::Widgets
        Qt::Network
)

include(GNUInstallDirs)

install(TARGETS APIProbe
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

qt_generate_deploy_app_script(
    TARGET APIProbe
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
